# tetris

./: .gitignore  Makefile  README.md  environment.yml  nfpm.yaml  pyproject.toml
.github/: release-body.md
.github/workflows/: _build-template.yml  release.yml  test-build.yml
scripts/: get-env-name  get-meta.sh  get-version  install_script.iss  setup.sh
src/: __init__.py  application.py  game_initializer.py  main.py  service_container.py  settings.py
src/engine/: __init__.py  board.py  events.py  game_controller.py  game_session.py  physics.py  progression.py  scoring.py  shapes.py  tetromino.py  tile.py
src/network/: __init__.py  connection_manager.py
src/security/: __init__.py  key_manager.py
src/ui/: __init__.py  audio.py  renderer.py  screen.py  screen_factory.py  screen_manager.py  screens.py
src/ui/assets/: asset_manager.py
src/ui/assets/loaders/: audio_loader.py  base_loader.py  font_loader.py  image_loader.py  tile_loader.py
src/ui/components/: __init__.py  menu.py
src/ui/screens/: __init__.py  game.py  game_over.py  loading.py  menu.py  pause.py  ranking.py
src/utils/: __init__.py  env_manager.py  logger.py  path_manager.py
