[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bloquinhos"
version = "1.0.0"
description = "Tetris-like game built with Pygame"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [
  { name = "Alex Beldam" },
  { name = "Bernardo Sabino" },
]
dependencies = [
  "pygame",
  "pymongo",
  "python-dotenv",
  "cryptography",
  "certifi",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]